Changed gujarati.html and styles.css, fixing some spacing issues. Note: Still some minor issues in spacing

--- a/styles.css
+++ b/styles.css
@@ -545,7 +545,6 @@ a:visited {
     width: 93.75%;
     margin-left: auto;
     margin-right: auto;
-    display: relative;
     height: 1400px;
 }
 
@@ -557,62 +556,27 @@ a:visited {
 
 .container4 > div:first-child {
     background-color: #D9D9D9;
-    border-radius: 10px;
-    
+    border-radius: 10px; 
 }
 
-.container4 > div:last-child {
-    display: flex;
-    flex-direction: column;
-}
-
-.container4 > div:last-child > div:first-child {
+.headpiece {
+    width: fit-content;
+    margin: 20px 0px 20px 40px;
     background-color: #415A77;
-    position: absolute;
-    left: 5%;
-    top: 2%;
+    color: white;
     border-radius: 10px;
-    width: 11%;
     padding: 10px;
     font-weight: bold;
 }
 
-.container4 > div:last-child > div {
+.text {
+    margin: 0px 0px 60px 40px;
     background-color: #1B263B;
     width: 91.7%;
     opacity: 95%;
     color: white;
     border-radius: 10px;
-    margin: auto;
-    margin-bottom: 0;
     display: flex;
-    flex-direction: row;
-}
-
-.container4 > div:last-child > div:first-child {
-    margin: auto;
-}
-
-.container4 > div:last-child > div:last-child {
-    margin: auto;
-}
-
-.container4 > div:last-child > div > div {
-    margin: auto;
-}
-
-.container4 > div:last-child > div > div:first-child {
-    width: 80.8%;
-}
-
-.container4 h2 {
-    font-size: 32px;
-    font-weight: 900;
-}
-
-.container4 p {
-    font-size: 24px;
-    opacity: 80%;
 }
 /* --------------------------------------------------------------------------- CSS for class: container4, end --------------------------------------------------------------------------- */
 
